# zipeek

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
crates/dict-builder/: Cargo.toml  build.rs
crates/dict-builder/src/: builder.rs  conversions.rs  hash_map.rs  hsk.rs  lexemes.proto  lib.rs  main.rs  models.rs  refiner.rs  search_index.rs  shard.rs  utils.rs  writer.rs
crates/zipseek-core/: Cargo.toml
crates/zipseek-core/src/: conversions.rs  hash_map.rs  lib.rs  models.rs  search_index.rs  shard.rs  storage.proto  traits.rs
icons/: site.webmanifest
public/: sample.json  social.json
src/: api.rs  app.rs  contexts.rs  main.rs  route.rs
src/components/: background.rs  fade_container.rs  footer.rs  layout.rs  loader.rs  mod.rs  settings.rs
src/components/lexeme/: error.rs  loaded.rs  mod.rs
src/models/: error.rs  misc.rs  mod.rs
src/pages/: home.rs  lexeme.rs  mod.rs  random.rs
src/services/: api.rs  hash_to_lexeme.rs  http_client.rs  lru.rs  mod.rs  search_index.rs  shard.rs  speech.rs
styles/: main.css
