[workspace]
members = [
    "crates/dict-builder",
]
resolver = "2"

[package]
name = "zipeek"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Jozefpodlecki/zipeek"
description = ""
categories = []
keywords = []
rust-version = "1.94.0"

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19.0"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3.91"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
futures = "0.3.29"
log = "0.4.29"
wasm-logger = "0.2.0"
gloo = "0.11"
yew_icons = {version = "0.9", features = ["lucide", "simple_icons"]}
rand = "0.10.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
chrono = { version = "0.4.44", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "DomTokenList",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "SpeechSynthesisVoice",
    "DomStringMap"
]

[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3"]