[package]
name = "dict-builder"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
anyhow = "1.0.90"
log = "0.4.29"
protobuf-parse = "3.7.2"
cc-cedict-parser-rs = { path = "C:\\repos\\cc-cedict-parser-rs", features = ["serde"]}
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hashbrown = { version = "0.16.1", features = ["serde"] }
zipseek-core = { path = "../zipseek-core" }
xxhash-rust = { version = "0.8.12",features = ["xxh3"] }
flexi_logger = { version = "0.31.7", default-features = false }