[package]
name = "zipseek-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
anyhow = "1.0.90"
log = "0.4.29"
# protobuf-parse = "3.7.2"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hashbrown = { version = "0.16.1", features = ["serde"] }
xxhash-rust = { version = "0.8.12",features = ["xxh3"] }
ruzstd = "0.8.2"
hex = "0.4.3"
cc-cedict-parser-rs = { path = "C:\\repos\\cc-cedict-parser-rs", features = ["serde"]}

[build-dependencies]
prost-build = "0.12"
